# bitpredict_system

./: .gitignore  LICENSE  README.md  pyproject.toml
conf/: config.yaml
notebooks/: 00_EDA.ipynb  01_build_model.ipynb  02_deploy_model.ipynb
source/: custom_layer.py  service.py  train.py  utils.py
